fixed cropping issue

--- a/app/style.css
+++ b/app/style.css
@@ -35,6 +35,9 @@
     color: white;
     background-color: black;
     max-width: 600px;
+}
+
+#songs-wrapper {
     margin: 20px;
 }
 
